--- a/Zookeeper (Java)/Rush into print/task-info.yaml
+++ b/Zookeeper (Java)/Rush into print/task-info.yaml
@@ -39,6 +39,6 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/229/stages/1147/implement#comment
+feedback_link: https://hyperskill.org/learn/step/17788#comment
 status: Solved
 record: 1
