--- a/Zookeeper (Java)/Show me an animal/task-info.yaml
+++ b/Zookeeper (Java)/Show me an animal/task-info.yaml
@@ -75,5 +75,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/17789#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Mon, 08 May 2023 16:11:07 UTC"
+record: 2
